bk_ida/gccida/c3/fix_register
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fix_register/src/regclass.c:1232:49: error: use of undeclared identifier 'fix_register_what_option'
error( "can't use '%s' as a %s register", name, fix_register_what_option[fixed][call_used]); 
                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fix_register/src/obj/regclass.o] Error 1
